# first-calender-backend

./: .flake8  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini
.github/workflows/: docker-image.yml  lint.yml
app/: Dockerfile  db.yaml  load_data.py  main.py  pyproject.toml
app/domain/: __init__.py
app/domain/entities/: user.py
app/domains/: __init__.py
app/domains/entities/: __init__.py  event.py  reminder.py  tag.py  test.py  user.py
app/drivers/api/: deps.py  urls.py
app/drivers/api/endpoints/: event.py  tag.py  user.py
app/drivers/models/: base.py  event.py  test.py  user.py
app/drivers/rdb/: base.py  init_db.py
app/drivers/rdb/models/: __init__.py  event.py  tag.py  test.py  user.py
app/drivers/user_auth/driver/: init_data.py
app/drivers/user_auth/driver/api/endpoint/: auth.py
app/drivers/user_auth/driver/models/: auth_user.py
app/drivers/user_auth/entity/: auth.py
app/drivers/user_auth/usecase/: auth.py
app/interfaces/: __init__.py  event.py  tag.py  user.py
app/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
app/tests/: conftest.py  test_app.py  utils.py
app/tests/fixtures/: db.yaml
app/tests/test_api/: test_event.py  test_tag.py  test_user.py
app/usecases/: __init__.py  event.py  tag.py  user.py
backend/: .gitignore  README.md  docker-compose.yml  go.mod  main.go
backend/app/: Dockerfile  main.py  pyproject.toml
backend/docker/: Dockerfile  docker-compose.yaml
docs/: api.md  api_list.md  db.md
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
(+4 files in other folders)
