[tool.poetry]
name = "first_calender"
version = "0.1.0"
description = ""
authors = ["azuma"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.2"
mysql-connector-python = "^8.0.26"
uvicorn = "^0.15.0"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.26"
pytest = "^6.2.5"
coverage = "^6.2"
requests = "^2.26.0"
email-validator = "^1.1.3"
alembic = "^1.7.5"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
flake8 = "^3.9.2"
types-PyYAML = "^6.0.0"
types-requests = "^2.25.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
